# Souris

./: .gitignore  Cargo.toml  LICENSE  README.md  db.ddb
.github/workflow/: ci.yml
.github/workflows/: checktestlint.yml
.run/: Hack Check.run.xml  clippy.run.xml  fmt.run.xml  view test.sdb.run.xml
crates/bitsy/: Cargo.toml
crates/bitsy/src/: main.rs  state.rs
crates/dad/: Cargo.toml  db.ddb
crates/dad/src/: main.rs
crates/daddy/: Cargo.toml
crates/daddy/proptest-regressions/niches/: integer.txt  proptests.txt
crates/daddy/src/: lib.rs  niches.rs  store.rs  types.rs  values.rs  version.rs
crates/daddy/src/niches/: integer.rs  proptests.rs
crates/daddy/src/types/: array.rs  integer.rs  ts.rs
crates/daddy/src/utilities/: cursor.rs
crates/daddy_daemon/: Cargo.toml  db.ddb
crates/daddy_daemon/src/: main.rs
crates/father/: Cargo.toml
crates/father/src/: main.rs  state.rs
crates/itsy/: Cargo.toml
crates/itsy/src/: main.rs
crates/itsy_bitsy/: Cargo.toml
crates/itsy_bitsy/src/types/: integer.rs
crates/mouse/: Cargo.toml
crates/mouse/src/: main.rs  value_utils.rs
crates/souris/: Cargo.toml
crates/souris/src/: main.rs
crates/sourisd/: Cargo.toml  Dockerfile  fly.toml
crates/sourisd/src/: apidoc.rs  error.rs  main.rs  routes.rs  state.rs  tcp.rs  v1_routes.rs
crates/sourisd/src/routes/: new_db.rs
crates/sourisd/src/v1_routes/: db.rs  new_db.rs  state.rs  value.rs
crates/sourisdb/: Cargo.toml
crates/sourisdb/benches/: .gitignore  compression.rs  database.rs  example.sdb  huffman.rs  utilities.rs
crates/sourisdb/proptest-regressions/: values.txt
crates/sourisdb/proptest-regressions/types/: integer.txt
crates/sourisdb/proptest-regressions/types/binary/: huffman.txt  lz.txt
crates/sourisdb/proptest-regressions/utilities/: bits.txt  huffman.txt
crates/sourisdb/src/: axum.rs  client.rs  lib.rs  net.rs  store.rs  types.rs  utilities.rs  values.rs  version.rs
crates/sourisdb/src/client/: async_client.rs  sync_client.rs
crates/sourisdb/src/net/: axum.rs  tcp_utils.rs
crates/sourisdb/src/types/: array.rs  binary.rs  imaginary.rs  integer.rs  ts.rs
crates/sourisdb/src/types/binary/: huffman.rs  lz.rs  rle.rs
crates/sourisdb/src/utilities/: bits.rs  cursor.rs  huffman.rs  value_utils.rs
crates/sourisdb/src/values/: axum.rs
crates/srs/: Cargo.toml
crates/srs/src/: main.rs
