[package]
name = "itsy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
comfy-table = "7.1.1"
itsy_bitsy = {path = "../itsy_bitsy" }
dialoguer = { version = "0.11.0", features = ["fuzzy-matcher", "fuzzy-select", "history", "completion"] }
chrono = "0.4"
chrono-tz = "0.9"