[package]
name = "mouse"
description = "Client for the daemon for SourisDB."
license = "MIT"
repository = "https://github.com/BurntNail/souris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
sourisdb = { version = "0.1.0", features = ["std", "serde", "sync_client"] }
dialoguer = { version = "0.11.0", features = [
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
    "completion",
] }
serde_json = "1.0.117"
