[package]
name = "sourisd"
description = "Daemon for SourisDB."
license = "MIT"
repository = "https://github.com/BurntNail/souris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.5", features = ["macros"]}
color-eyre = "0.6.3"
sourisdb = {path = "../sourisdb", features = ["std", "serde", "axum"]}
dirs = "5.0.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0.198", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["trace"] }
libc = "0.2.159"
