[package]
name = "sourisdb"
description = "Database format focused on compression size without using external libraries."
license = "MIT"
repository = "https://github.com/BurntNail/souris"
version = "0.2.1"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
proptest = "1.4.0"
chrono = { version = "0.4.38", features = ["arbitrary"] }
axum = { version = "0.7.5", features = ["macros"] }
criterion = { version = "0.4", features = ["html_reports"] }

[dependencies]
axum = { version = "0.7", optional = true }
chrono = "0.4"
hashbrown = "0.14"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = "1.0"
chrono-tz = "0.9"
comfy-table = { version = "7.1", optional = true }
dialoguer = { version = "0.11", optional = true, features = ["fuzzy-matcher",
    "fuzzy-select",
    "history",
    "completion",
] }
cfg-if = "1.0"
paste = "1.0"
ureq = { version = "2.9.7", optional = true }
http = { version = "1.1.0", optional = true }
reqwest = { version = "0.12.5", optional = true, features = ["json"] }
itertools = "0.13.0"

[features]
default = []
std = ["dep:comfy-table", "dep:dialoguer"]
axum = ["std", "dep:axum", "serde"]
serde = ["dep:serde", "chrono/serde", "hashbrown/serde", "chrono-tz/serde"]
sync_client = ["dep:ureq", "dep:http", "std"]
async_client = ["dep:reqwest", "dep:http"]

[[bench]]
name = "utilities"
harness = false

[[bench]]
name = "database"
harness = false
